--- a/Traffic_pre-processing_training.ipynb
+++ b/Traffic_pre-processing_training.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 69,
    "id": "62e38da1",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "import seaborn as sns\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n"
    ]
   },
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "eeb71108",
+   "id": "b320e3dc",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a067615d",
+   "id": "73ca1b35",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "2a45f138",
+   "id": "9e647ac7",
    "metadata": {},
    "outputs": [
     {
@@ -515,41 +515,175 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "74e7d9bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "issue_reported\n",
+       "0    42.979385\n",
+       "1    55.196339\n",
+       "2    68.461010\n",
+       "3    42.089731\n",
+       "4    31.433333\n",
+       "5    36.540976\n",
+       "6    45.440106\n",
+       "Name: timespan_min, dtype: float64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_issue = df.groupby('issue_reported').mean()\n",
+    "avg_issue_span = avg_issue.timespan_min\n",
+    "avg_issue_span"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "c3463b4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "issue_reported\n",
+       "0    36.016667\n",
+       "1    50.450000\n",
+       "2    60.466667\n",
+       "3    32.066667\n",
+       "4    22.775000\n",
+       "5    27.000000\n",
+       "6    31.833333\n",
+       "Name: timespan_min, dtype: float64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median_issue = df.groupby('issue_reported').median()\n",
+    "median_issue_span = median_issue.timespan_min\n",
+    "median_issue_span"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "f133bffe",
+   "id": "389d4410",
    "metadata": {},
    "source": [
     "Location definitions\n",
-    "vnw = The very northwest edge of the city that is west of MOPAC and north of 183\n",
+    "vnw = The very northwest edge of the city that is west of I35 and north of 183\n",
     "vcw = West of MOPAC but south of 183 and north of 290\n",
-    "vsw = The very southwest edge of the city that is west of MOPAC and south of Ben White\n",
+    "vsw = The very southwest edge of the city that is west of I35 and south of Ben White\n",
     "\n",
     "cnw = Central northwest of the city, west of I35, south of 183, east of MOPAC, north of MLK\n",
     "cw = Central west of the city, west of I35, south of MLK, east of MOPAC, north of the river\n",
     "csw = Central southwest of the city, west of I35, south of the river, east of MOPAC, north of Ben White\n",
     "\n",
-    "cne = Central northeast of the city, east of I35, n\n",
-    "ce = \n",
-    "cse\n",
+    "cne = Central northeast of the city, east of I35, South of 183, east of 183 and north of MLK\n",
+    "ce = Central east of the city, east of I35, south of MLK, east of 183, north of the river\n",
+    "cse = Central southeast of the city, east of I35, south of the river, east of 183, north of Ben White\n",
     "\n",
-    "vne = The very northeast edge of the city that is east of I35 and north of 183\n",
-    "vce = East of 183, north of t\n",
-    "vse = "
+    "vne = The very northeast edge of the city that is east of I35, east and north of 183\n",
+    "vce = The very east of the city, east 183, south of 290(east), north of Ben White/71\n",
+    "vse = The very southeast of the city, east of I35, south of Ben White/71\n",
+    "\n",
+    "other = a coordinate not within a field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e84ccc3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partOfCity(lat, lon):\n",
+    "    if (lat < 30.21638 and lon < -97.75142):\n",
+    "        return \"vsw\"\n",
+    "    elif (lat < 30.21638 and lon > -97.75142):\n",
+    "        return \"vse\"\n",
+    "    elif (lat > 30.33926 and lon < -97.70008):\n",
+    "        return \"vnw\"\n",
+    "    elif (lat > 30.33926 and lon > -97.70008):\n",
+    "        return \"vne\"\n",
+    "    elif (lat > 30.21638 and lat < 30.33926 and lon < -97.75816):\n",
+    "        return \"vcw\"\n",
+    "    elif (lat > 30.21638 and lat < 30.33926 and lon > -97.66523):\n",
+    "        return \"vce\"\n",
+    "    elif (lat < 30.25108 and lat < 30.21638 and lon < -97.72575 and lon > -97.75816):\n",
+    "        return \"csw\"\n",
+    "    elif (lat < 30.25108 and lat < 30.21638 and lon > -97.72575 and lon < -97.66523):\n",
+    "        return \"cse\"\n",
+    "    elif (lat < 30.33926 and lat > 30.27887 and lon < -97.72575 and lon > -97.75816):\n",
+    "        return \"cne\"\n",
+    "    elif (lat < 30.33926 and lat > 30.27887 and lon < -97.72575 and lon > -97.75816):\n",
+    "        return \"cnw\"\n",
+    "    elif(lat > 30.25108 and lat < 30.27887 and lon > -97.72575 and lon < -97.66523):\n",
+    "        return \"ce\"\n",
+    "    elif(lat > 30.25108 and lat < 30.27887 and lon < -97.72575 and lon > -97.75816):\n",
+    "        return \"cw\"\n",
+    "    else:\n",
+    "        return \"other\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9f78463",
+   "metadata": {},
+   "source": [
+    "I want to create a new column called \"region\" and use the above fuction to divide up incidents into one of 12 areas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "2aa97007",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/d2/b8_107b155z0478lwpx5ssrr0000gp/T/ipykernel_32105/3643346700.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'region'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpartOfCity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLatitude\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLongitude\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/d2/b8_107b155z0478lwpx5ssrr0000gp/T/ipykernel_32105/3270988003.py\u001b[0m in \u001b[0;36mpartOfCity\u001b[0;34m(lat, lon)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpartOfCity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m30.21638\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlon\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m97.75142\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m\"vsw\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m30.21638\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlon\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m97.75142\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m\"vse\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/Springboard/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1535\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mfinal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1536\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1537\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   1538\u001b[0m             \u001b[0;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1539\u001b[0m             \u001b[0;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
+   "source": [
+    "df['region'] = partOfCity(df.Latitude,df.Longitude)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1848f1",
+   "id": "8e121996",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=??, random_state=21, stratify=y )\n",
-    "knn = KNeighborsClassifier(n_neighbors=???)\n",
-    "knn.fit(X_train, y_train)\n",
-    "y_pred = knn.predict(X_test)\n",
-    "knn.score(X_test, y_test)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f44618c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
