--- a/Traffic_pre-processing_training.ipynb
+++ b/Traffic_pre-processing_training.ipynb
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "38e10f38",
+   "id": "5150aa8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "42407dcd",
+   "id": "acce04bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "c523bf8c",
+   "id": "19f09ae4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "0d3d881a",
+   "id": "6f04b81e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "a2942f43",
+   "id": "61b87f47",
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "1f8ab227",
+   "id": "fe5864fd",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "fc345371",
+   "id": "93abcc0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "ccc4207b",
+   "id": "3cfc42f9",
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad624bd0",
+   "id": "b08c32d6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1676,16 +1676,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 135,
    "id": "e8490a34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'XGBoost' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/d2/b8_107b155z0478lwpx5ssrr0000gp/T/ipykernel_2789/378012153.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'KNN'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DTC'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDecisionTreeClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_depth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'XGB'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mXGBoost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'XGBoost' is not defined"
+     ]
+    }
+   ],
    "source": [
     "models = []\n",
     "\n",
     "models.append(('RFC', RandomForestClassifier()))\n",
     "models.append(('KNN', KNeighborsClassifier()))\n",
-    "models.append(('DTC', DecisionTreeClassifier(max_depth = 2)))"
+    "models.append(('DTC', DecisionTreeClassifier(max_depth = 2)))\n",
+    "#models.append(('XGB', XGBoost()))"
    ]
   },
   {
@@ -1919,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 136,
    "id": "43837107",
    "metadata": {},
    "outputs": [],
@@ -1929,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 137,
    "id": "3a0b370c",
    "metadata": {},
    "outputs": [],
@@ -1943,12 +1956,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9bb56ad1",
+   "execution_count": 139,
+   "id": "c1b3805a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Parameter grid for parameter (criterion) needs to be a list or numpy array, but got (<class 'str'>). Single values need to be wrapped in a list with one element.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/d2/b8_107b155z0478lwpx5ssrr0000gp/T/ipykernel_2789/1278963834.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m grid = GridSearchCV(model,\n\u001b[0m\u001b[1;32m      2\u001b[0m                     \u001b[0mparam_grid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparam_dict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                     \u001b[0mcv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                     \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                     \u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/Springboard/lib/python3.8/site-packages/sklearn/model_selection/_search.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, estimator, param_grid, scoring, n_jobs, refit, cv, verbose, pre_dispatch, error_score, return_train_score)\u001b[0m\n\u001b[1;32m   1386\u001b[0m         )\n\u001b[1;32m   1387\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparam_grid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparam_grid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1388\u001b[0;31m         \u001b[0m_check_param_grid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_grid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1389\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1390\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_run_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mevaluate_candidates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/Springboard/lib/python3.8/site-packages/sklearn/model_selection/_search.py\u001b[0m in \u001b[0;36m_check_param_grid\u001b[0;34m(param_grid)\u001b[0m\n\u001b[1;32m    332\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    333\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSequence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 334\u001b[0;31m                 raise ValueError(\n\u001b[0m\u001b[1;32m    335\u001b[0m                     \u001b[0;34m\"Parameter grid for parameter ({0}) needs to\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m                     \u001b[0;34m\" be a list or numpy array, but got ({1}).\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Parameter grid for parameter (criterion) needs to be a list or numpy array, but got (<class 'str'>). Single values need to be wrapped in a list with one element."
+     ]
+    }
+   ],
    "source": [
-    "gride = GridSearchCV(model,\n",
+    "grid = GridSearchCV(model,\n",
     "                    param_grid=param_dict,\n",
     "                    cv=5,\n",
     "                    verbose=1,\n",
