--- a/Traffic_pre-processing_training.ipynb
+++ b/Traffic_pre-processing_training.ipynb
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e6f6813e",
+   "id": "8d4af752",
    "metadata": {},
    "source": []
   },
@@ -962,7 +962,7 @@
    "id": "dbb786ec",
    "metadata": {},
    "source": [
-    "## Scaling Timespan and One Hot Encoding for the four other features"
+    "## Scaling Timespan Feature"
    ]
   },
   {
