--- a/Traffic_pre-processing_training.ipynb
+++ b/Traffic_pre-processing_training.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6592420",
+   "cell_type": "markdown",
+   "id": "3339698c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Choosing and Training a Model"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b688b99b",
+   "id": "28b2ddcf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3248e25f",
+   "id": "5bcf2f6b",
    "metadata": {},
    "source": [
     "Then reshape the series to scale it as 2D arrays"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "e11a173d",
+   "id": "6b1001c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "0fcafbf5",
+   "id": "51bed733",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "3429cbc0",
+   "id": "14e9a950",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdb2064f",
+   "id": "92af2893",
    "metadata": {},
    "source": [
     "Then create new columns for for each of the series."
@@ -1168,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "b323bda1",
+   "id": "25028c52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "b0ae821a",
+   "id": "341131a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,6 +1343,14 @@
    "source": [
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "064b0141",
+   "metadata": {},
+   "source": [
+    "## One Hot Encoding the Categorical Variables"
    ]
   },
   {
@@ -1752,7 +1760,10 @@
    "id": "0701740b",
    "metadata": {},
    "source": [
-    "## Random Forest Hyperparamter Tuning"
+    "## Random Forest Hyperparamter Tuning\n",
+    "\n",
+    "\n",
+    "The Random Forest default performed best. Now to find the best parameters to tune."
    ]
   },
   {
@@ -1834,7 +1845,7 @@
    "id": "d40b2aa4",
    "metadata": {},
    "source": [
-    "## Attempting to perform a confusion matrix on knn model"
+    "## Attempting to perform a confusion matrix on Random Forest model"
    ]
   },
   {
@@ -1861,7 +1872,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "466dc023",
+   "id": "733ba106",
    "metadata": {},
    "outputs": [
     {
@@ -1894,7 +1905,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "0d98006b",
+   "id": "1238262c",
    "metadata": {},
    "outputs": [
     {
@@ -2011,9 +2022,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9341b7d7",
+   "metadata": {},
+   "source": [
+    "# Running Reports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "fc1dea56",
+   "id": "4b4b153b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2022,20 +2041,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "0c923532",
+   "execution_count": 172,
+   "id": "2ca21890",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR Accuracy Score:  0.6155048903280179\n",
-      "LR Precision Score:  0.6155048903280179\n",
-      "LR Recall Score:  0.6155048903280179\n",
-      "LR F1 Score:  0.6155048903280179\n",
-      "LR F0.5-Measure:  0.6155048903280179\n",
-      "LR Confusion Matrix: \n",
+      "RF Accuracy Score:  0.6155048903280179\n",
+      "RF Precision Score:  0.6155048903280179\n",
+      "RF Recall Score:  0.6155048903280179\n",
+      "RF F1 Score:  0.6155048903280179\n",
+      "RF F0.5-Measure:  0.6155048903280179\n",
+      "RF Confusion Matrix: \n",
       "\n",
       " [[ 6253    74   497   333     0  3042     0]\n",
       " [ 1334   119   175    49     0   452     0]\n",
@@ -2044,7 +2063,7 @@
       " [   25     1  1168     0     5  3129     0]\n",
       " [ 2072    11  8811   266     0 25891     0]\n",
       " [  162     8    15    11     0    87     1]]\n",
-      "LR Classification Report: \n",
+      "RF Classification Report: \n",
       "\n",
       "               precision    recall  f1-score   support\n",
       "\n",
@@ -2078,18 +2097,18 @@
     }
    ],
    "source": [
-    "print('LR Accuracy Score: ', accuracy_score(y_test , y_pred))\n",
-    "print('LR Precision Score: ', precision_score(y_test, y_pred, pos_label='positive', average='micro'))\n",
-    "print('LR Recall Score: ', recall_score(y_test, y_pred, pos_label='positive', average='micro'))\n",
-    "print('LR F1 Score: ', f1_score(y_test, y_pred, pos_label='positive', average='micro'))\n",
-    "print('LR F0.5-Measure: ', fbeta_score(y_test, y_pred, beta=0.5, pos_label='positive', average='micro'))\n",
-    "print('LR Confusion Matrix: \\n\\n', confusion_matrix(y_test , y_pred))\n",
-    "print('LR Classification Report: \\n\\n', classification_report(y_test, y_pred))"
+    "print('RF Accuracy Score: ', accuracy_score(y_test , y_pred))\n",
+    "print('RF Precision Score: ', precision_score(y_test, y_pred, pos_label='positive', average='micro'))\n",
+    "print('RF Recall Score: ', recall_score(y_test, y_pred, pos_label='positive', average='micro'))\n",
+    "print('RF F1 Score: ', f1_score(y_test, y_pred, pos_label='positive', average='micro'))\n",
+    "print('RF F0.5-Measure: ', fbeta_score(y_test, y_pred, beta=0.5, pos_label='positive', average='micro'))\n",
+    "print('RF Confusion Matrix: \\n\\n', confusion_matrix(y_test , y_pred))\n",
+    "print('RF Classification Report: \\n\\n', classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d462888b",
+   "id": "edea4bc2",
    "metadata": {},
    "source": [
     "## For some reason all my scores are the same: 0.6155048903280179"
@@ -2098,7 +2117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc42fe90",
+   "id": "1fd90355",
    "metadata": {},
    "outputs": [],
    "source": []
